Add: Added better alts for the images and webp image to the login screen

--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
             src="/img/icon_down-arrow.svg"
             class="accordion__header--icon"
             alt="Seta para baixo que exibe resposta da pergunta"
+            loading="lazy"
           />
         </button>
         <div class="accordion__body">
@@ -387,7 +388,12 @@
           <span class="accordion__header--title"
             >O que é preciso para adotar um pet?</span
           >
-          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+          <img
+            src="/img/icon_down-arrow.svg"
+            class="accordion__header--icon"
+            alt="Seta para baixo que exibe resposta da pergunta"
+            loading="lazy"
+          />
         </button>
         <div class="accordion__body">
           <p class="accordion__paragraph">
@@ -406,7 +412,12 @@
           <span class="accordion__header--title"
             >Quais são os documentos necessários para uma adoção?
           </span>
-          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+          <img
+            src="/img/icon_down-arrow.svg"
+            class="accordion__header--icon"
+            alt="Seta para baixo que exibe resposta da pergunta"
+            loading="lazy"
+          />
         </button>
         <div class="accordion__body">
           <p class="accordion__paragraph">
@@ -425,7 +436,12 @@
           <span class="accordion__header--title"
             >Após o preenchimento do formulário, quanto tempo devo aguardar?
           </span>
-          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+          <img
+            src="/img/icon_down-arrow.svg"
+            class="accordion__header--icon"
+            alt="Seta para baixo que exibe resposta da pergunta"
+            loading="lazy"
+          />
         </button>
         <div class="accordion__body">
           <p class="accordion__paragraph">
@@ -444,7 +460,12 @@
           <span class="accordion__header--title"
             >Adotei um pet e ele não se adaptou, é possível a devolução?
           </span>
-          <img src="/img/icon_down-arrow.svg" class="accordion__header--icon" />
+          <img
+            src="/img/icon_down-arrow.svg"
+            class="accordion__header--icon"
+            alt="Seta para baixo que exibe resposta da pergunta"
+            loading="lazy"
+          />
         </button>
         <div class="accordion__body">
           <p class="accordion__paragraph">
@@ -515,6 +536,7 @@
         src="/img/icon_logo-alternative.svg"
         class="footer__logo"
         alt="Logo do MatchPet"
+        loading="lazy"
       />
       <p class="footer__quote">Mude uma vida: adote!</p>
       <p class="footer__email">contato@matchpet.com</p>
@@ -524,21 +546,25 @@
           src="/img/icon_whatsapp.svg"
           alt="Icone do Whatsapp"
           class="footer__socials__logo--whatsapp"
+          loading="lazy"
         />
         <img
           src="/img/icon_instagram.svg"
           alt="Icone do Instagram"
           class="footer__socials__logo--instagram"
+          loading="lazy"
         />
         <img
           src="/img/icon_youtube.svg"
           alt="Icone do Youtube"
           class="footer__socials__logo--youtube"
+          loading="lazy"
         />
         <img
           src="/img/icon_facebook.svg"
           alt="Icone do Facebook"
           class="footer__socials__logo--facebook"
+          loading="lazy"
         />
       </div>
 
