--- a/login.html
+++ b/login.html
@@ -2,6 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Página de login de um projeto fictício sobre adoção de pets criado por Mainá Palacios e desenvolvido por Marlon Seben"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="/css/style.css" />
@@ -9,7 +13,7 @@
   <body>
     <section class="login">
       <img
-        src="/img/picture_cat--login.png"
+        src="/img/picture_cat--login.webp"
         class="login__login-picture"
         alt="Gato tocando humano"
       />
