Add: Added register section on mobile, missing checkbox and submit button

--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="icon" type="image/x-icon" href="/img/icon_favicon.svg" />
   </head>
   <body>
     <section class="login">
@@ -50,7 +51,7 @@
           <button class="login__btn btn" type="submit">Entrar</button>
           <p class="login__text">
             Não tem uma conta?<br />
-            <a class="login__link" href="register.html">Cadastrar agora</a>
+            <a class="login__link" href="cadastro.html">Cadastrar agora</a>
           </p>
         </form>
       </div>
